SMETANA KBase output draft and Notebook updates

--- a/examples/Community Modeling/smetana/Untitled.ipynb
+++ b/examples/Community Modeling/smetana/Untitled.ipynb
@@ -2,6 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "44e50302-1272-4447-94e4-854e11515f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_e2ab4_row0_col0, #T_e2ab4_row0_col1, #T_e2ab4_row0_col2, #T_e2ab4_row2_col1 {\n",
+       "  background-color: #fff7fb;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_e2ab4_row1_col0, #T_e2ab4_row1_col2 {\n",
+       "  background-color: #73a9cf;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_e2ab4_row1_col1, #T_e2ab4_row2_col0, #T_e2ab4_row2_col2 {\n",
+       "  background-color: #023858;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_e2ab4\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_e2ab4_level0_col0\" class=\"col_heading level0 col0\" >first</th>\n",
+       "      <th id=\"T_e2ab4_level0_col1\" class=\"col_heading level0 col1\" >second</th>\n",
+       "      <th id=\"T_e2ab4_level0_col2\" class=\"col_heading level0 col2\" >third</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_e2ab4_level0_row0\" class=\"row_heading level0 row0\" >first</th>\n",
+       "      <td id=\"T_e2ab4_row0_col0\" class=\"data row0 col0\" >1</td>\n",
+       "      <td id=\"T_e2ab4_row0_col1\" class=\"data row0 col1\" >2</td>\n",
+       "      <td id=\"T_e2ab4_row0_col2\" class=\"data row0 col2\" >3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_e2ab4_level0_row1\" class=\"row_heading level0 row1\" >second</th>\n",
+       "      <td id=\"T_e2ab4_row1_col0\" class=\"data row1 col0\" >2</td>\n",
+       "      <td id=\"T_e2ab4_row1_col1\" class=\"data row1 col1\" >3</td>\n",
+       "      <td id=\"T_e2ab4_row1_col2\" class=\"data row1 col2\" >4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_e2ab4_level0_row2\" class=\"row_heading level0 row2\" >third</th>\n",
+       "      <td id=\"T_e2ab4_row2_col0\" class=\"data row2 col0\" >3</td>\n",
+       "      <td id=\"T_e2ab4_row2_col1\" class=\"data row2 col1\" >2</td>\n",
+       "      <td id=\"T_e2ab4_row2_col2\" class=\"data row2 col2\" >5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1ae7ec29550>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "67928cc0-5b9b-4f52-82a9-3b734ce0a4d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.style.background_gradient()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "1326ccdd-f8d7-40dc-9982-28db544f6179",
    "metadata": {},
