--- a/examples/HTML_report.ipynb
+++ b/examples/HTML_report.ipynb
@@ -1735,7 +1735,7 @@
    "id": "46b790aa-280e-43cc-b43f-a709a5e1c7e7",
    "metadata": {},
    "source": [
-    "# Combine pandas Series into a single DataFrame"
+    "### Combine pandas Series into a single DataFrame"
    ]
   },
   {
@@ -1803,6 +1803,102 @@
     "a = Series({\"a\": 12, \"b\":2, \"c\":4})\n",
     "b = Series({\"a\": 3, \"b\":2})\n",
     "display(concat([a,b], axis=1).T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "899e1302-287f-4fae-a697-ed69eff8cf0e",
+   "metadata": {},
+   "source": [
+    "# Construct a SMETANA report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "3c202015-42d0-46c9-a577-2c3b0e6bff78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Name</strong></td>\n",
+       "                <td>Bacteroides_thetaiotaomicron_VPI-5482.fbamdl.23</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>2974c10ae80</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Number of metabolites</strong></td>\n",
+       "                <td>1178</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Number of reactions</strong></td>\n",
+       "                <td>1531</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Number of genes</strong></td>\n",
+       "                <td>993</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Number of groups</strong></td>\n",
+       "                <td>1</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Objective expression</strong></td>\n",
+       "                <td>1.0*bio2 - 1.0*bio2_reverse_a4204</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Compartments</strong></td>\n",
+       "                <td>Cytosol_0, e0</td>\n",
+       "            </tr>\n",
+       "          </table>"
+      ],
+      "text/plain": [
+       "<FBAModel Bacteroides_thetaiotaomicron_VPI-5482.fbamdl.23 at 0x2974c10ae80>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from modelseedpy import MSSmetana\n",
+    "\n",
+    "smetana = MSSmetana([model1, model2])\n",
+    "print(dir(built_comm_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40f0f0fe-ea52-4eb2-9909-f85237c43674",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c9edc46c-b53a-4e7d-8e93-1e5a90500290",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(1, 3)\n",
+      "(2, 1)\n",
+      "(2, 3)\n",
+      "(3, 1)\n",
+      "(3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "\n",
+    "for x in permutations([1,2,3], 2):\n",
+    "    print(x)"
    ]
   }
  ],
