community updates; cleaning the example directory

--- a/examples/Community Modeling/MSCompatibility/MSCompatibility.ipynb
+++ b/examples/Community Modeling/MSCompatibility/MSCompatibility.ipynb
@@ -10,32 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "69a3e8a5",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\io\\dict.py:71: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  value: Union[str, np.float, np.bool, Set, Dict]\n",
-      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\io\\dict.py:71: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  value: Union[str, np.float, np.bool, Set, Dict]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cobrakbase 0.2.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define the environment path \n",
     "from pprint import pprint\n",
@@ -48,7 +28,7 @@
     "\n",
     "# import the models\n",
     "import cobrakbase\n",
-    "with open(\"C:/Users/Andrew Freiburger/Documents/Argonne/kbase_token.txt\") as token_file:\n",
+    "with open(\"D:/Users/Andrew Freiburger/Documents/Argonne/kbase_token.txt\") as token_file:\n",
     "    kbase_api = cobrakbase.KBaseAPI(token_file.readline())\n",
     "model1 = kbase_api.get_from_ws(\"iML1515\",76994)\n",
     "model2 = kbase_api.get_from_ws(\"iSB1139.kb.gf\",30650)\n",
@@ -93,9 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "13b3a902",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -104,7 +85,8 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mscompatibility.py:134: DeprecationWarning: invalid escape sequence \\w\n",
-      "  met_name = re.sub('_\\w\\d$', '', met.name)\n"
+      "  met_name = re.sub('_\\w\\d$', '', met.name)\n",
+      "modelseedpy.core.msmodel - ERROR - The [-0.0, 0.0] bounds are not amenable with a direction string.\n"
      ]
     },
     {
@@ -118,13 +100,48 @@
       " ============================================\n",
       "\n",
       "\n",
-      "{'original': {'id': 'cpd03191_e0', 'name': 'D-Glucuronate 1-phosphate_e0'},\n",
-      " 'new': {'id': 'cpd00880_e0', 'name': 'D-Glucuronate 1-phosphate_e0'},\n",
-      " 'justification': 'The cpd03191_e0 and cpd00880_e0 distinction in iML1515 is '\n",
-      "                  'incompatible; hence, the cpd00880_e0 ID and D-Glucuronate '\n",
-      "                  '1-phosphate_e0 are used. The cpd03191_e0 and cpd00880_e0 '\n",
-      "                  'metabolites were matched via their name. The ID match was '\n",
-      "                  \"verified with the ['BiGG'] cross-reference(s).\"}\n",
+      "{'original': {'id': 'tartr-D-e_e0', 'name': 'D-tartrate'},\n",
+      " 'new': {'id': 'cpd19018_e0', 'name': 'D-tartrate_e0'},\n",
+      " 'justification': 'The tartr-D-e_e0 and cpd19018_e0 distinction in iML1515 is '\n",
+      "                  'incompatible; hence, the cpd19018_e0 ID and D-tartrate_e0 '\n",
+      "                  'are used. The tartr-D-e_e0 ID is not a ModelSEED Database '\n",
+      "                  'ID. The tartr-D-e_e0 and cpd19018_e0 metabolites were '\n",
+      "                  'matched via their name.'}\n",
+      "\n",
+      "\n",
+      "{'original': {'id': '4abzglu-e_e0', 'name': '4-aminobenzoyl-glutamate'},\n",
+      " 'new': {'id': 'cpd26527_e0', 'name': '4-aminobenzoyl-glutamate_e0'},\n",
+      " 'justification': 'The 4abzglu-e_e0 and cpd26527_e0 distinction in iML1515 is '\n",
+      "                  'incompatible; hence, the cpd26527_e0 ID and '\n",
+      "                  '4-aminobenzoyl-glutamate_e0 are used. The 4abzglu-e_e0 ID '\n",
+      "                  'is not a ModelSEED Database ID. The 4abzglu-e_e0 and '\n",
+      "                  'cpd26527_e0 metabolites were matched via their name.'}\n",
+      "\n",
+      "\n",
+      "{'original': {'id': 'metsox-R-L-e_e0', 'name': 'L-methionine-R-sulfoxide'},\n",
+      " 'new': {'id': 'cpd14720_e0', 'name': 'L-methionine-R-sulfoxide_e0'},\n",
+      " 'justification': 'The metsox-R-L-e_e0 and cpd14720_e0 distinction in iML1515 '\n",
+      "                  'is incompatible; hence, the cpd14720_e0 ID and '\n",
+      "                  'L-methionine-R-sulfoxide_e0 are used. The metsox-R-L-e_e0 '\n",
+      "                  'ID is not a ModelSEED Database ID. The metsox-R-L-e_e0 and '\n",
+      "                  'cpd14720_e0 metabolites were matched via their name.'}\n",
+      "\n",
+      "\n",
+      "{'original': {'id': 'cpd00609_e0', 'name': 'D-Glucarate_e0'},\n",
+      " 'new': {'id': 'cpd00571_e0', 'name': 'D-Glucarate_e0'},\n",
+      " 'justification': 'The cpd00609_e0 and cpd00571_e0 distinction in iML1515 is '\n",
+      "                  'incompatible; hence, the cpd00571_e0 ID and D-Glucarate_e0 '\n",
+      "                  'are used. The cpd00609_e0 and cpd00571_e0 metabolites were '\n",
+      "                  'matched via their name. The ID match was verified with the '\n",
+      "                  \"['BiGG'] cross-reference(s).\"}\n",
+      "\n",
+      "\n",
+      "{'original': {'reaction': 'cpd15411_e0 <=> '},\n",
+      " 'new': {'reaction': 'cpd03294_e0 <=> '},\n",
+      " 'justification': 'The new cpd03294_e0 ID for cpd15411_e0 already exists in '\n",
+      "                  'model iML1515, so each reaction (here EX_cpd15411_e0) must '\n",
+      "                  \"be replaced. The ID match was verified with the ['BiGG', \"\n",
+      "                  \"'BiGG'] cross-reference(s).\"}\n",
       "\n",
       "\n",
       "{'original': {'reaction': 'cpd10516_e0 + cpd15411_e0 --> cpd03294_e0'},\n",
@@ -144,39 +161,22 @@
       "                  \"'BiGG'] cross-reference(s).\"}\n",
       "\n",
       "\n",
-      "{'original': {'reaction': 'cpd15411_e0 <=> '},\n",
-      " 'new': {'reaction': 'cpd03294_e0 <=> '},\n",
-      " 'justification': 'The new cpd03294_e0 ID for cpd15411_e0 already exists in '\n",
-      "                  'model iML1515, so each reaction (here EX_cpd15411_e0) must '\n",
-      "                  \"be replaced. The ID match was verified with the ['BiGG', \"\n",
-      "                  \"'BiGG'] cross-reference(s).\"}\n",
+      "{'original': {'id': 'dhps-e_e0', 'name': '2,3-Dihydroxypropane-1-sulfonate'},\n",
+      " 'new': {'id': 'cpd31356_e0', 'name': '2,3-Dihydroxypropane-1-sulfonate_e0'},\n",
+      " 'justification': 'The dhps-e_e0 and cpd31356_e0 distinction in iML1515 is '\n",
+      "                  'incompatible; hence, the cpd31356_e0 ID and '\n",
+      "                  '2,3-Dihydroxypropane-1-sulfonate_e0 are used. The dhps-e_e0 '\n",
+      "                  'ID is not a ModelSEED Database ID. The dhps-e_e0 and '\n",
+      "                  'cpd31356_e0 metabolites were matched via their name.'}\n",
       "\n",
       "\n",
-      "{'original': {'id': 'cpd00609_e0', 'name': 'D-Glucarate_e0'},\n",
-      " 'new': {'id': 'cpd00571_e0', 'name': 'D-Glucarate_e0'},\n",
-      " 'justification': 'The cpd00609_e0 and cpd00571_e0 distinction in iML1515 is '\n",
-      "                  'incompatible; hence, the cpd00571_e0 ID and D-Glucarate_e0 '\n",
-      "                  'are used. The cpd00609_e0 and cpd00571_e0 metabolites were '\n",
-      "                  'matched via their name. The ID match was verified with the '\n",
-      "                  \"['BiGG'] cross-reference(s).\"}\n",
-      "\n",
-      "\n",
-      "{'original': {'id': '4abzglu-e_e0', 'name': '4-aminobenzoyl-glutamate'},\n",
-      " 'new': {'id': 'cpd26527_e0', 'name': '4-aminobenzoyl-glutamate_e0'},\n",
-      " 'justification': 'The 4abzglu-e_e0 and cpd26527_e0 distinction in iML1515 is '\n",
-      "                  'incompatible; hence, the cpd26527_e0 ID and '\n",
-      "                  '4-aminobenzoyl-glutamate_e0 are used. The 4abzglu-e_e0 ID '\n",
-      "                  'is not a ModelSEED Database ID. The 4abzglu-e_e0 and '\n",
-      "                  'cpd26527_e0 metabolites were matched via their name.'}\n",
-      "\n",
-      "\n",
-      "{'original': {'id': 'tartr-D-e_e0', 'name': 'D-tartrate'},\n",
-      " 'new': {'id': 'cpd19018_e0', 'name': 'D-tartrate_e0'},\n",
-      " 'justification': 'The tartr-D-e_e0 and cpd19018_e0 distinction in iML1515 is '\n",
-      "                  'incompatible; hence, the cpd19018_e0 ID and D-tartrate_e0 '\n",
-      "                  'are used. The tartr-D-e_e0 ID is not a ModelSEED Database '\n",
-      "                  'ID. The tartr-D-e_e0 and cpd19018_e0 metabolites were '\n",
-      "                  'matched via their name.'}\n",
+      "{'original': {'id': 'cpd03191_e0', 'name': 'D-Glucuronate 1-phosphate_e0'},\n",
+      " 'new': {'id': 'cpd00880_e0', 'name': 'D-Glucuronate 1-phosphate_e0'},\n",
+      " 'justification': 'The cpd03191_e0 and cpd00880_e0 distinction in iML1515 is '\n",
+      "                  'incompatible; hence, the cpd00880_e0 ID and D-Glucuronate '\n",
+      "                  '1-phosphate_e0 are used. The cpd03191_e0 and cpd00880_e0 '\n",
+      "                  'metabolites were matched via their name. The ID match was '\n",
+      "                  \"verified with the ['BiGG'] cross-reference(s).\"}\n",
       "\n",
       "\n",
       "{'original': {'id': 'metsox-S-L-e_e0', 'name': 'L-Methionine Sulfoxide'},\n",
@@ -188,68 +188,9 @@
       "                  'metabolites were matched via their name.'}\n",
       "\n",
       "\n",
-      "{'original': {'id': 'dhps-e_e0', 'name': '2,3-Dihydroxypropane-1-sulfonate'},\n",
-      " 'new': {'id': 'cpd31356_e0', 'name': '2,3-Dihydroxypropane-1-sulfonate_e0'},\n",
-      " 'justification': 'The dhps-e_e0 and cpd31356_e0 distinction in iML1515 is '\n",
-      "                  'incompatible; hence, the cpd31356_e0 ID and '\n",
-      "                  '2,3-Dihydroxypropane-1-sulfonate_e0 are used. The dhps-e_e0 '\n",
-      "                  'ID is not a ModelSEED Database ID. The dhps-e_e0 and '\n",
-      "                  'cpd31356_e0 metabolites were matched via their name.'}\n",
-      "\n",
-      "\n",
-      "{'original': {'id': 'metsox-R-L-e_e0', 'name': 'L-methionine-R-sulfoxide'},\n",
-      " 'new': {'id': 'cpd14720_e0', 'name': 'L-methionine-R-sulfoxide_e0'},\n",
-      " 'justification': 'The metsox-R-L-e_e0 and cpd14720_e0 distinction in iML1515 '\n",
-      "                  'is incompatible; hence, the cpd14720_e0 ID and '\n",
-      "                  'L-methionine-R-sulfoxide_e0 are used. The metsox-R-L-e_e0 '\n",
-      "                  'ID is not a ModelSEED Database ID. The metsox-R-L-e_e0 and '\n",
-      "                  'cpd14720_e0 metabolites were matched via their name.'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\model.py:522: DeprecationWarning: add_reaction deprecated. Use add_reactions instead\n",
-      "  warn(\"add_reaction deprecated. Use add_reactions instead\", DeprecationWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
       "\n",
       "Standardize exchange reactions in iSB1139 \n",
       " ============================================\n",
-      "\n",
-      "\n",
-      "{'original': {'id': 'r1423_e0', 'name': 'alpha-ketoglutarate'},\n",
-      " 'new': {'id': 'cpd00024_e0', 'name': 'alpha-ketoglutarate_e0'},\n",
-      " 'justification': 'The r1423_e0 and cpd00024_e0 distinction in iSB1139 is '\n",
-      "                  'incompatible; hence, the cpd00024_e0 ID and '\n",
-      "                  'alpha-ketoglutarate_e0 are used. The r1423_e0 ID is not a '\n",
-      "                  'ModelSEED Database ID. The r1423_e0 and cpd00024_e0 '\n",
-      "                  'metabolites were matched via their name.'}\n",
-      "\n",
-      "\n",
-      "{'original': {'id': 'r293_e0', 'name': 'Fe2+'},\n",
-      " 'new': {'id': 'cpd10515_e0', 'name': 'Fe2+_e0'},\n",
-      " 'justification': 'The r293_e0 and cpd10515_e0 distinction in iSB1139 is '\n",
-      "                  'incompatible; hence, the cpd10515_e0 ID and Fe2+_e0 are '\n",
-      "                  'used. The r293_e0 ID is not a ModelSEED Database ID. The '\n",
-      "                  'r293_e0 and cpd10515_e0 metabolites were matched via their '\n",
-      "                  'name.'}\n",
-      "\n",
-      "\n",
-      "{'original': {'id': 'r1262_e0', 'name': 'Mo2+'},\n",
-      " 'new': {'id': 'cpd00131_e0', 'name': 'Mo2+_e0'},\n",
-      " 'justification': 'The r1262_e0 and cpd00131_e0 distinction in iSB1139 is '\n",
-      "                  'incompatible; hence, the cpd00131_e0 ID and Mo2+_e0 are '\n",
-      "                  'used. The r1262_e0 ID is not a ModelSEED Database ID. The '\n",
-      "                  'r1262_e0 and cpd00131_e0 metabolites were matched via their '\n",
-      "                  'name.'}\n",
       "\n",
       "\n",
       "{'original': {'id': 'r307_e0', 'name': 'Mn2+'},\n",
@@ -270,6 +211,24 @@
       "                  \"['BiGG'] cross-reference(s).\"}\n",
       "\n",
       "\n",
+      "{'original': {'id': 'r277_e0', 'name': '2-dehydro-D-gluconate'},\n",
+      " 'new': {'id': 'cpd00480_e0', 'name': '2-dehydro-D-gluconate_e0'},\n",
+      " 'justification': 'The r277_e0 and cpd00480_e0 distinction in iSB1139 is '\n",
+      "                  'incompatible; hence, the cpd00480_e0 ID and '\n",
+      "                  '2-dehydro-D-gluconate_e0 are used. The r277_e0 ID is not a '\n",
+      "                  'ModelSEED Database ID. The r277_e0 and cpd00480_e0 '\n",
+      "                  'metabolites were matched via their name.'}\n",
+      "\n",
+      "\n",
+      "{'original': {'id': 'r1262_e0', 'name': 'Mo2+'},\n",
+      " 'new': {'id': 'cpd00131_e0', 'name': 'Mo2+_e0'},\n",
+      " 'justification': 'The r1262_e0 and cpd00131_e0 distinction in iSB1139 is '\n",
+      "                  'incompatible; hence, the cpd00131_e0 ID and Mo2+_e0 are '\n",
+      "                  'used. The r1262_e0 ID is not a ModelSEED Database ID. The '\n",
+      "                  'r1262_e0 and cpd00131_e0 metabolites were matched via their '\n",
+      "                  'name.'}\n",
+      "\n",
+      "\n",
       "{'original': {'id': 'r1400_e0', 'name': 'protoheme IX'},\n",
       " 'new': {'id': 'cpd00028_e0', 'name': 'protoheme IX_e0'},\n",
       " 'justification': 'The r1400_e0 and cpd00028_e0 distinction in iSB1139 is '\n",
@@ -277,6 +236,24 @@
       "                  'are used. The r1400_e0 ID is not a ModelSEED Database ID. '\n",
       "                  'The r1400_e0 and cpd00028_e0 metabolites were matched via '\n",
       "                  'their name.'}\n",
+      "\n",
+      "\n",
+      "{'original': {'id': 'r293_e0', 'name': 'Fe2+'},\n",
+      " 'new': {'id': 'cpd10515_e0', 'name': 'Fe2+_e0'},\n",
+      " 'justification': 'The r293_e0 and cpd10515_e0 distinction in iSB1139 is '\n",
+      "                  'incompatible; hence, the cpd10515_e0 ID and Fe2+_e0 are '\n",
+      "                  'used. The r293_e0 ID is not a ModelSEED Database ID. The '\n",
+      "                  'r293_e0 and cpd10515_e0 metabolites were matched via their '\n",
+      "                  'name.'}\n",
+      "\n",
+      "\n",
+      "{'original': {'id': 'r1423_e0', 'name': 'alpha-ketoglutarate'},\n",
+      " 'new': {'id': 'cpd00024_e0', 'name': 'alpha-ketoglutarate_e0'},\n",
+      " 'justification': 'The r1423_e0 and cpd00024_e0 distinction in iSB1139 is '\n",
+      "                  'incompatible; hence, the cpd00024_e0 ID and '\n",
+      "                  'alpha-ketoglutarate_e0 are used. The r1423_e0 ID is not a '\n",
+      "                  'ModelSEED Database ID. The r1423_e0 and cpd00024_e0 '\n",
+      "                  'metabolites were matched via their name.'}\n",
       "\n",
       "\n",
       "{'original': {'reaction': 'r504_c0 --> r505_e0'},\n",
@@ -291,15 +268,6 @@
       " 'justification': 'The new cpd00028_e0 ID for r505_e0 already exists in model '\n",
       "                  'iSB1139, so each reaction (here EX_r505_e0) must be '\n",
       "                  'replaced.'}\n",
-      "\n",
-      "\n",
-      "{'original': {'id': 'r277_e0', 'name': '2-dehydro-D-gluconate'},\n",
-      " 'new': {'id': 'cpd00480_e0', 'name': '2-dehydro-D-gluconate_e0'},\n",
-      " 'justification': 'The r277_e0 and cpd00480_e0 distinction in iSB1139 is '\n",
-      "                  'incompatible; hence, the cpd00480_e0 ID and '\n",
-      "                  '2-dehydro-D-gluconate_e0 are used. The r277_e0 ID is not a '\n",
-      "                  'ModelSEED Database ID. The r277_e0 and cpd00480_e0 '\n",
-      "                  'metabolites were matched via their name.'}\n",
       "\n",
       "\n",
       "5 reactions were substituted and 14 metabolite IDs were redefined in iML1515,iSB1139 by standardize().\n"
